# torchmorphic

./: LICENSE  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
src/torchmorphic/: __init__.py  compiler.py  extractor.py  registry.py
tests/: residual_block.py  siamese.py  simple_mha.py  transformer_lite.py
