[project]
name = "torchmorphic"
version = "0.1.0"
description = "A transpiler mapping PyTorch FX graphs to DisCoPy string diagrams."
readme = "README.md"
authors = [
    { name = "Isidor Manning", email = "isidormanning@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "discopy>=1.2.2",
    "torch>=2.11.0",
]

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.3",
    "pytest>=9.0.2",
    "ruff>=0.15.7",
]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "W"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = "src"

[tool.ruff.format]
indent-style = "space"
quote-style = "double"